--- a/src/components/styles/base.css
+++ b/src/components/styles/base.css
@@ -1,5 +1,5 @@
 @media (prefers-reduced-motion: reduce) {
-  *,
+  .VPDoc *,
   ::before,
   ::after {
     animation-delay: -1ms !important;
@@ -12,23 +12,17 @@
   }
 }
 
-*,
-::before,
-::after {
-  box-sizing: border-box;
-}
-
-html {
+.VPDoc {
   line-height: 1.4;
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
 }
 
-html.dark {
+.VPDoc.dark {
   color-scheme: dark;
 }
 
-body {
+.VPDoc {
   margin: 0;
   width: 100%;
   min-width: 320px;
@@ -45,28 +39,28 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-main {
+.VPDoc main {
   display: block;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.VPDoc h1,
+.VPDoc h2,
+.VPDoc h3,
+.VPDoc h4,
+.VPDoc h5,
+.VPDoc h6 {
   margin: 0;
   line-height: 24px;
   font-size: 16px;
   font-weight: 400;
 }
 
-p {
+.VPDoc p {
   margin: 0;
 }
 
-strong,
-b {
+.VPDoc strong,
+.VPDoc b {
   font-weight: 600;
 }
 
@@ -85,167 +79,167 @@ b {
  * - http://caniuse.com/#feat=css-touch-action
  * - http://patrickhlauke.github.io/touch/tests/results/#suppressing-300ms-delay
  */
-a,
-area,
-button,
-[role='button'],
-input,
-label,
-select,
-summary,
-textarea {
+.VPDoc a,
+.VPDoc area,
+.VPDoc button,
+.VPDoc [role='button'],
+.VPDoc input,
+.VPDoc label,
+.VPDoc select,
+.VPDoc summary,
+.VPDoc textarea {
   touch-action: manipulation;
 }
 
-a {
+.VPDoc a {
   color: inherit;
   text-decoration: inherit;
 }
 
-ol,
-ul {
+.VPDoc ol,
+.VPDoc ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-blockquote {
+.VPDoc blockquote {
   margin: 0;
 }
 
-pre,
-code,
-kbd,
-samp {
+.VPDoc pre,
+.VPDoc code,
+.VPDoc kbd,
+.VPDoc samp {
   font-family: var(--vp-font-family-mono);
 }
 
-img,
-svg,
-video,
-canvas,
-audio,
-iframe,
-embed,
-object {
+.VPDoc img,
+.VPDoc svg,
+.VPDoc video,
+.VPDoc canvas,
+.VPDoc audio,
+.VPDoc iframe,
+.VPDoc embed,
+.VPDoc object {
   display: block;
 }
 
-figure {
+.VPDoc figure {
   margin: 0;
 }
 
-img,
-video {
+.VPDoc img,
+.VPDoc video {
   max-width: 100%;
   height: auto;
 }
 
-button,
-input,
-optgroup,
-select,
-textarea {
+.VPDoc button,
+.VPDoc input,
+.VPDoc optgroup,
+.VPDoc select,
+.VPDoc textarea {
   border: 0;
   padding: 0;
   line-height: inherit;
   color: inherit;
 }
 
-button {
+.VPDoc button {
   padding: 0;
   font-family: inherit;
   background-color: transparent;
   background-image: none;
 }
 
-button:enabled,
-[role='button']:enabled {
+.VPDoc button:enabled,
+.VPDoc [role='button']:enabled {
   cursor: pointer;
 }
 
-button:focus,
-button:focus-visible {
+.VPDoc button:focus,
+.VPDoc button:focus-visible {
   outline: 1px dotted;
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-button:focus:not(:focus-visible) {
+.VPDoc button:focus:not(:focus-visible) {
   outline: none !important;
 }
 
-input:focus,
-textarea:focus,
-select:focus {
+.VPDoc input:focus,
+.VPDoc textarea:focus,
+.VPDoc select:focus {
   outline: none;
 }
 
-table {
+.VPDoc table {
   border-collapse: collapse;
 }
 
-input {
+.VPDoc input {
   background-color: transparent;
 }
 
-input:-ms-input-placeholder,
-textarea:-ms-input-placeholder {
+.VPDoc input:-ms-input-placeholder,
+.VPDoc textarea:-ms-input-placeholder {
   color: var(--vp-c-text-3);
 }
 
-input::-ms-input-placeholder,
-textarea::-ms-input-placeholder {
+.VPDoc input::-ms-input-placeholder,
+.VPDoc textarea::-ms-input-placeholder {
+  color: var(--vp-c-text-3);
+}
+.VPDoc input::placeholder,
+.VPDoc textarea::placeholder {
   color: var(--vp-c-text-3);
 }
 
-input::placeholder,
-textarea::placeholder {
-  color: var(--vp-c-text-3);
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+.VPDoc input::-webkit-outer-spin-button,
+.VPDoc input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type='number'] {
+.VPDoc input[type='number'] {
   -moz-appearance: textfield;
 }
 
-textarea {
+.VPDoc textarea {
   resize: vertical;
 }
 
-select {
+.VPDoc select {
   -webkit-appearance: none;
 }
 
-fieldset {
+.VPDoc fieldset {
   margin: 0;
   padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-li,
-p {
+.VPDoc h1, 
+.VPDoc h2, 
+.VPDoc h2,
+.VPDoc h3,
+.VPDoc h4,
+.VPDoc h5,
+.VPDoc h6,
+.VPDoc li,
+.VPDoc p {
   overflow-wrap: break-word;
 }
 
-vite-error-overlay {
+.VPDoc vite-error-overlay {
   z-index: 9999;
 }
 
-mjx-container {
+.VPDoc mjx-container {
   overflow-x: auto;
 }
 
-mjx-container > svg {
+.VPDoc  mjx-container > svg {
   display: inline-block;
   margin: auto;
 }
